txt-output/122.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: the annotation should be [Char] -> Int
length :: [Int] -> Int                                   
length ls = length' 0 ls
    where length' n [] = n
          lengths n (_:xs) = length' (n+1) xs       
v81 = length "abc"          
fac n = if n <=0 then True else n * fac (n-1)
sqsum [] = 0
sqsum (x:xs) = sqsum xs ++ x * x
sumList [] = []
sumList (x:xs) = x + sumList xs
append x [] = [x]
append x xs = x : xs
digitsOfInt n = if n <=0 then [] else append (digitsOfInt (n / 10)) [n mod 10]
wwhile (f,b) = case f of
                 (z, false) -> z
                 (z, true) -> wwhile (f, z)
testw x = let xx x * x in (xx, (xx < 100))
restltw = wwhile (testw, 2)
append [] l = l
append (x:xs) l = x : xs : l
replicate n x = if n <= 0 then [] else replicate (n-1) [x]
fac1 n m = if n <= m then True else n * fac (n - 1) m
vulOp :: String -> Int -> String
vulOp entry lengte = entry ++ (replicate (lengte - (length entry)) " ")
odd1 x = not . even x
insert :: Int -> [Int] -> [Int]
insert = undefined
insertionSort :: [Int] -> [Int]
insertionSort lijst = insert (head lijst) insertionSort (tail lijst)


OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\122.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\122.hs:22:23: parse error on input `in'


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\122.hs, ill-typed\122.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\122.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\122.hs:22:24: error: parse error on input `in'
   |
22 | testw x = let xx x * x in (xx, (xx < 100))
   |                        ^^
